Fix menu background - stretch and adapt ti screen width 8embedded svg

--- a/html/web/themes/custom/comunicaitalia/src/scss/_globals/_variables.scss
+++ b/html/web/themes/custom/comunicaitalia/src/scss/_globals/_variables.scss
@@ -23,7 +23,7 @@ $maxwidth-small: 980px;
 // =============================================================================
 
 $header-height:   3.5em;
-$menu-height:     14em;
+$menu-height:     20em;
 $menu-margin:     4em;
 $roadmap-height:  40em;
 
