--- a/html/web/themes/custom/comunicaitalia/src/scss/layout/_l-navigation.scss
+++ b/html/web/themes/custom/comunicaitalia/src/scss/layout/_l-navigation.scss
@@ -1,8 +1,8 @@
 .region-navigation {
-  background-image: url('../images/backgrounds/bg-menu.svg');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 100%;
+  // background-image: url('../images/backgrounds/bg-menu.svg');
+  // background-position: center;
+  // background-repeat: no-repeat;
+  // background-size: 100%;
   height: $menu-height;
   position: relative;
   nav {
